No longer need our own spacing helpers since Bootstrap now comes with their own

--- a/imports/ui/shared/empty-result/empty-result.scss
+++ b/imports/ui/shared/empty-result/empty-result.scss
@@ -4,7 +4,6 @@
 .empty-result {
   text-align: center;
   padding: 30px;
-  margin: 20px;
   border: 3px dashed #e4e4e4;
   border-radius: 5px;
 }
@@ -18,10 +17,7 @@
   margin-bottom: -5px;
 }
 
-.empty-result__heading {
-  font-weight: 600;
-  letter-spacing: -1px;
-}
+.empty-result__heading {}
 
 .empty-result__description {
   font-size: 1.9rem;
